# python_nix_hello_world

./: Makefile  README.md
apps/librechat/: librechat.yaml
apps/mcp-server/: .dockerignore  Dockerfile  Makefile  README.md  flake.nix  pyproject.toml  pytest.ini
apps/mcp-server/src/pokemon_mcp/: pokemon_api.py  schemas.py  server.py  settings.py
apps/mcp-server/tests/: test_pokemon_api.py  test_pokemon_api_integration.py
infra/compose/: docker-compose.yml
